# zigzag

./: .env.shared  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  README.md
BACKEND/: .gitignore  pyproject.toml
BACKEND/zigzag/: .env.example  db.sqlite3
BACKEND/zigzag/events/: admin.py  middleware.py  models.py  serializers.py  tests.py  throttles.py  urls.py  utils.py  views.py
BACKEND/zigzag/events/migrations/: 0001_initial.py  0002_rename_category_tag.py  0003_remove_event_is_public.py  0004_remove_event_whatsapp_group_link.py  0005_profile_timezone_profile_utc_offset_minutes.py  0006_event_event_shared.py  0007_alter_eventparticipation_unique_together_and_more.py  0008_alter_address_address_line.py  0009_alter_address_postal_code.py  0010_circle_is_invitation_circle_circle_linked_event_and_more.py
BACKEND/zigzag/zigzag/: asgi.py  settings.py  urls.py  wsgi.py
FRONTEND/zigzag/: .env.example  capacitor.config.json  index.html  manifest.json  marker-pulse.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
FRONTEND/zigzag/public/.well-known/: apple-app-site-association  assetlinks.json
FRONTEND/zigzag/src/: App.jsx  config.example.js  config.js  index.css  main.jsx
FRONTEND/zigzag/src/api/: api.js
FRONTEND/zigzag/src/assets/: customMarkers.jsx  markersIcon.js
FRONTEND/zigzag/src/components/: AccountCreation.jsx  Callback.jsx  DebugLogger.jsx  EventPopup.jsx  EventView.jsx  MarkersMap.jsx  PublicEventView.jsx
FRONTEND/zigzag/src/components/AppRedirectBanner/: AppRedirectBanner.css  AppRedirectBanner.jsx
FRONTEND/zigzag/src/components/Calendar/: CalendarView.jsx  CalendarView.module.css  CircleSelector.jsx  CircleSelector.module.css
FRONTEND/zigzag/src/components/Circles/: Circle.module.css  CircleDetailsView.jsx  CirclesSidebar.jsx  MainCircles.jsx  UserProfileView.jsx
FRONTEND/zigzag/src/context/: AuthContext.jsx
FRONTEND/zigzag/src/contexts/: AuthProvider.jsx  Callback.jsx  MapContext.jsx
FRONTEND/zigzag/src/utils/: deepLinkHandler.js  descriptionParser.jsx  mobileDetection.js
(+48 files in other folders)
