[project]
name = "zigzag"
version = "0.1.0"
description = "Please have fun"
readme = "README.md"
requires-python = ">=3.9, <3.11"
dependencies = [
    "cryptography>=41.0.7",
    "django-allauth>=65.11.2",
    "django-cors-headers>=4.8.0",
    "django>=4.2.17,<5.0",
    "djangorestframework-simplejwt>=5.3.1",
    "djangorestframework>=3.15.2",
    "requests>=2.32.3",
    "django-ratelimit>=4.1.0",
    "psycopg[binary]>=3.2.1",
    "icalendar>=5.0.11",
    "python-dotenv>=1.0.0",
    "dj-database-url>=2.1.0",
    "whitenoise>=6.0.0",
]
authors = [
  {name = "BlueMountain"},
  {name = "Dartagnan"},
  {name = "Another person"},
]
